log
Fri Mar 27 12:13:57 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
b1981e4
Fri Mar 27 12:34:18 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
68eeb9e
Fri Mar 27 12:37:15 AM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
dc7994f
Fri Mar 27 12:38:30 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd5f2ec
Fri Mar 27 12:49:28 AM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:5: error: ‘else’ without a previous ‘if’
   55 |     else return NULL;
      |     ^~~~
469b65a
Fri Mar 27 12:50:12 AM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
2e07fa6
Fri Mar 27 12:54:41 AM UTC 2026: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 15/60
bfcb03c
Fri Mar 27 12:58:02 AM UTC 2026: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:14: error: expected expression before ‘void’
   62 |             *void dato = list->current->data;
      |              ^~~~
list.c:63:20: error: ‘dato’ undeclared (first use in this function)
   63 |             return dato;
      |                    ^~~~
list.c:63:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
f14b8ca
Fri Mar 27 01:00:19 AM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:48: error: expected ‘;’ before ‘void’
   62 |             list->current = list->current->next
      |                                                ^
      |                                                ;
   63 |             void* dato = list->current->data;
      |             ~~~~                                
list.c:64:20: error: ‘dato’ undeclared (first use in this function)
   64 |             return dato;
      |                    ^~~~
list.c:64:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
8934e91
Fri Mar 27 01:00:37 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/60
eadfa66
Fri Mar 27 01:02:35 AM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|5
total_score: 15/60
d531173
Fri Mar 27 01:04:30 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b62a436
Fri Mar 27 01:05:34 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
2c87611
Fri Mar 27 01:28:43 AM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|4
total_score: 20/60
728fea5
Fri Mar 27 01:32:35 AM UTC 2026: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|3
total_score: 30/60
8dedbb5
Fri Mar 27 02:20:34 AM UTC 2026: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|3
total_score: 30/60
6e25ad9
Fri Mar 27 02:23:43 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 30/60
451dfd8
Fri Mar 27 02:49:01 AM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
751291f
Fri Mar 27 02:15:28 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 40/60
72e0eb5
Fri Mar 27 02:25:28 PM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 40/60
d9ab197
Fri Mar 27 02:29:52 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
da6d3c8
Fri Mar 27 02:30:07 PM UTC 2026: 
 tests:  11|1
total_score: 50/60
5a8b1f3
Fri Mar 27 02:33:34 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
de7488b
Fri Mar 27 02:35:22 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:172:1: error: control reaches end of non-void function [-Werror=return-type]
  172 | }
      | ^
cc1: all warnings being treated as errors
795f4f3
Fri Mar 27 02:36:04 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
4407907
Fri Mar 27 02:37:09 PM UTC 2026: 
 tests:  0|0
c06eb52
Fri Mar 27 02:48:49 PM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:173:23: error: unused variable ‘dato’ [-Werror=unused-variable]
  173 |                 void* dato = list->current->data;
      |                       ^~~~
list.c:178:16: error: ‘dato’ undeclared (first use in this function)
  178 |         return dato;
      |                ^~~~
list.c:178:16: note: each undeclared identifier is reported only once for each function it appears in
list.c:180:1: error: control reaches end of non-void function [-Werror=return-type]
  180 | }
      | ^
cc1: all warnings being treated as errors
8f63ada
Fri Mar 27 02:59:26 PM UTC 2026: 
 list.c | 21 ++++++++++++++-------
 1 file changed, 14 insertions(+), 7 deletions(-)
Compilation failed
test.c: In function ‘popCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:189:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  189 | void cleanList(List * list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
1db7ee9
Fri Mar 27 02:59:54 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:188:1: error: control reaches end of non-void function [-Werror=return-type]
  188 | }
      | ^
cc1: all warnings being treated as errors
c5aee8b
Fri Mar 27 03:00:31 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 60/60
0bea930
